test/tests/operators/to_kafka/iam/error_missing_secret_access_key.txt
error: `access_key_id` and `secret_access_key` must be specified together
 --> tests/operators/to_kafka/iam/error_missing_secret_access_key.tql:9:18
  |
9 |          aws_iam={
  |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 
  |
